fix: 阅读模式无法滚动 1、为layout.html的html添加class default 2、明确设置default下body的样式 3、在没有套用layout.html的页面中，body不会受overflow:hidden影响

--- a/bookmarks/styles/bookmark-page.css
+++ b/bookmarks/styles/bookmark-page.css
@@ -10,12 +10,14 @@
 }
 
 /* 页面滚动容器设置 */
-body {
-  overflow: hidden;
-  height: 100vh;
-  margin-left: 0;
-  margin-right: 0;
-  padding: 0;
+html.default {
+  body {
+    overflow: hidden;
+    height: 100vh;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+  }
 }
 
 .body-container {
